--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -29,13 +29,13 @@ body {
 }
 
 .ng-hide-remove {
-    -webkit-animation: fadeIn 0.25s;
-    animation: fadeIn 0.25s;
+    -webkit-animation: fadeIn 0.2s;
+    animation: fadeIn 0.2s;
 }
  
 .ng-hide-add {
-    -webkit-animation: fadeOut 0.25s;
-    animation: fadeOut 0.25s;
+    -webkit-animation: fadeOut 0.2s;
+    animation: fadeOut 0.2s;
     display: block !important;
 }
 
@@ -59,26 +59,6 @@ body {
     z-index: 2001;
 }
 
-.well {
-    margin-bottom: 5px;
-}
-
-.white {
-    color: white;
-}
-
-.spacing {
-    margin-bottom: 10px;
-}
-
-.spacing-r {
-    margin-right: 10px;
-}
-
-.margin-20 {
-    margin: 20px;
-}
-
 /*
  *Index
  */
@@ -88,86 +68,12 @@ body {
 }
 
 /*
- *Drag&Drop
- */
-
-.nav-header {
-    font-size: 16px;
-    font-weight: bold;
-    text-align: right;
-    text-transform: uppercase;
-}
-
-ul.nav li {
-    position: static;
-}
-
-ul.nav li.dragged {
-    position: absolute;
-    opacity: 0.7;
-    z-index: 100;
-}
-
-ul.nav li.placeholder {
-    position: relative;
-}
-
-ul.nav li.placeholder:before {
-    border: 5px solid transparent;
-    border-bottom: none;
-    border-top-color: black;
-    content: '';
-    margin-left: -6px;
-    position: absolute;
-    top: -3px;
-}
-
-/*
- *Present
- */
-
-.x path {
-    fill: none;
-    stroke: '#777777';
-}
-
-/*
- *Performance
- */
-.update {
-    fill: #b0bec5;
-}
-
-/*
  *Historical
  */
-rect.pane {
-    cursor: move;
-    fill: none;
-    pointer-events: all;
-}
-
-.legend {
-    margin: 3px;
-    float: left;
-    width: 13px;
-    height: 13px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    border-radius: 7px;
-}
-
-.historical-drilldown > div {
-    width: 25%;
-    display: inline-block;
-}
-
-.small-padding {
-    padding: 10px;
-}
 
 .zebra-lines {
-    font-size: 0.9rem;
+    padding-top: 6px;
+    padding-bottom: 6px;
 }
 
 .zebra-lines:nth-child(2n) {
@@ -176,15 +82,6 @@ rect.pane {
 
 .zebra-lines:hover {
     background: #d4d7d8;
-}
-
-h1.dark-gray,h3.dark-gray {
-    color: #222;
-}
-
-.font-shadow {
-    color: black !important;
-    /*text-shadow: 1px 1px 1px #000;*/
 }
 
 .done-graph-data {
@@ -211,10 +108,6 @@ h1.dark-gray,h3.dark-gray {
     vector-effect: non-scaling-stroke;
 }
 
-.pull-right {
-    float: right;
-}
-
 .total-bar {
     background-color: #9da3a7;
     width:100%;
@@ -230,15 +123,6 @@ h1.dark-gray,h3.dark-gray {
     background-color: #8eb2cf;
 }
 
-.pmp-radio-buttons {
-    height: 30px;
-}
-
-.pmp-radio-buttons > label {
-    padding: 2px 10px;
-    background-color: #dc3545
-}
-
 .pmp-radio-buttons > label.active {
     background-color: #f4bc91 !important;
     color: black !important;
@@ -247,4 +131,41 @@ h1.dark-gray,h3.dark-gray {
 .zebra-lines > div {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.suggestions-type {
+    margin-left: 20px;
+    font-size: 0.8rem;
+}
+
+@keyframes blink {
+    0% {
+      opacity: .2;
+    }
+    20% {
+      opacity: 1;
+    }
+    100% {
+      opacity: .2;
+    }
+}
+
+.loading-data span {
+    animation-name: blink;
+    animation-duration: 1.4s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.loading-data span:nth-child(2) {
+    animation-delay: .2s;
+}
+
+.loading-data span:nth-child(3) {
+    animation-delay: .4s;
+}
+
+#historical-drilldown>div {
+    width: 25%;
+    display: inline-block;
 }
