--- a/pmp/static/partials/present-stats-table.html
+++ b/pmp/static/partials/present-stats-table.html
@@ -3,14 +3,14 @@
   <table class="table text-center col-12">
     <thead>
       <tr>
-        <th>Campaign</th>
-        <th>new</th>
-        <th>validation</th>
-        <th>defined</th>
-        <th>approved</th>
-        <th>submitted</th>
-        <th>done</th>
-        <th>Total</th>
+        <th class="text-center">Campaign</th>
+        <th class="text-center">new</th>
+        <th class="text-center">validation</th>
+        <th class="text-center">defined</th>
+        <th class="text-center">approved</th>
+        <th class="text-center">submitted</th>
+        <th class="text-center">done</th>
+        <th class="text-center">Total</th>
       </tr>
     </thead>
     <tbody>
