--- a/pmp/static/partials/checkbox-selections.html
+++ b/pmp/static/partials/checkbox-selections.html
@@ -1,6 +1,6 @@
-<div style="display: inline-block;">
+<div style="display: inline-block; text-transform: capitalize;">
   <div class="btn-group btn-group-toggle pmp-radio-buttons" data-toggle="buttons">
-    <label ng-repeat="(option, name) in options" class="btn btn-secondary {{selectionDict[option] ? 'active' : ''}}">
+    <label ng-repeat="(option, name) in options" class="btn btn-primary {{selectionDict[option] ? 'active' : ''}}">
       <input type="checkbox" name="options" id="option-{{option}}" ng-model="selectionDict[option]" autocomplete="off" ng-change="selectionChanged(option)"> {{name}}
     </label>
   </div>
