--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -1,75 +1,74 @@
 <div>
   <div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-       <h1 class="pull-right dark-gray d-none d-md-block">
-         <strong>{{page.title}}</strong>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hidden-xs">
+       <h1 class="pull-right">
+         <strong>{{page.title}}</strong><strong ng-class="{'ng-hide': !growingMode}">&nbsp;(Growing Mode)</strong>
        </h1>
-       <h3 class="pull-right dark-gray d-md-none">
-         <strong>{{page.title}}</strong>
+    </div>
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 visible-xs-block">
+       <h3 class="pull-right">
+         <strong>{{page.title}}</strong><strong ng-class="{'ng-hide': !growingMode}">&nbsp;(Growing Mode)</strong>
        </h3>
     </div>
   </div>
   <div class="row">
-    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8" ng-controller="TypeaheadController" ng-init="initSuggestions()">
-      <div class="row">
-        <div class="input-group">
-          <input type="text"
-                 ng-model="campaign"
-                 ng-change="getSuggestions(campaign, page.typeahead)"
-                 uib-typeahead="s as s.label for s in suggestions | filter:$viewValue"
-                 typeahead-template-url="partials/search-suggestion.html"
-                 class="form-control"
-                 placeholder="Start typing to search...">
-          <div class="input-group-append">
-            <button type="button"
-                    class="btn btn-danger"
-                    ng-click="load(campaign, false)"
-                    ng-disabled="loadingData">
-              <i class="hidden-lg hidden-md fa fa-eye"></i>
-              <span class="hidden-sm hidden-xs"> Show</span>
-            </button>
-            <button type="button"
-                    class="btn btn-danger"
-                    ng-click="load(campaign, true)"
-                    ng-disabled="loadingData || chainedMode">
-              <i class="hidden-lg hidden-md fa fa-plus"></i>
-              <span class="hidden-sm hidden-xs"> Append</span>
-            </button>
-          </div>
+    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" ng-controller="TypeaheadController">
+      <script type="text/ng-template" id="customSuggestionsTemplate">
+        <a class="text-right">
+            <span class="pull-left" ng-bind-html="match.label | uibTypeaheadHighlight:query"></span>
+            <span class="suggestions-type">{{match.model.type}}</span>
+        </a>
+      </script>
+      <div class="input-group">
+         <input type="text"
+                ng-model="searchString"
+                placeholder="Search for campaigns, requests, tags..."
+                uib-typeahead="address as address.label for address in getSuggestions($viewValue, page.typeahead)"
+                typeahead-template-url="customSuggestionsTemplate"
+                class="form-control">
+        <div class="input-group-btn">
+          <button type="button"
+                  class="btn btn-primary"
+                  ng-click="load(searchString, false)"
+                  ng-disabled="loadingData">
+            <i class="hidden-lg hidden-md fa fa-eye"></i>
+            <span> Show</span>
+          </button>
+          <button type="button"
+                  class="btn btn-primary"
+                  ng-click="load(searchString, true)"
+                  ng-disabled="loadingData || chainedMode">
+            <i class="hidden-lg hidden-md fa fa-plus"></i>
+            <span> Append</span>
+          </button>
         </div>
       </div>
-      <div class="row mt-2" ng-show="loadingData" >
-          <i class="fa fa-spinner fa-spin fa-1x mr-1"></i><small> Loading...</small>
-      </div>
-      <div class="row mt-2" ng-hide="displayChains">
-        <input-tags style="padding-bottom: 0px;"></input-tags> 
+      <div class="mt-3 mb-3" ng-hide="chainedMode">
+        <input-tags></input-tags> 
       </div> 
     </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-      <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#filter">
-        <i class="fa fa-eyedropper"></i>
-        <small> Filter</small>
-      </a>
-      <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#advanced">
-        <i class="fa fa-cog"></i>
-        <small> Advanced</small>
-      </a>
-      <a class="btn btn-sm text-uppercase hidden-xs" data-toggle="collapse" data-target="#share">
-        <i class="fa fa-share"></i>
-        <small> Share</small>
-      </a>
-      <div ng-include="'build/filter.min.html'"></div>
-      <div ng-include="'build/advanced.min.html'"></div>
-      <div ng-include="'build/share.min.html'"></div>
-    </div>
-  </div>
-  <div class="row mt-2">
-    <div class="panel" ng-show="showDate">
-      <div class="panel-body">
-        Last update: {{lastUpdate | date:"d MMMM y H:mm 'UTC'Z"}}
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+      <div class="btn-group pull-right" role="group">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#filter">Filters</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#advanced">Options</button>
+        </div>
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#share">Sharing</button>
+        </div>
+      </div>
+      <div>
+        <div ng-include="'build/filter.min.html'"></div>
+        <div ng-include="'build/advanced.min.html'"></div>
+        <div ng-include="'build/share.min.html'"></div>
       </div>
     </div>
   </div>
 </div>
 
-<div ng-include="page.template"></div>
+<div ng-hide="loadingData" ng-include="page.template"></div>
+<div ng-show="loadingData" class="mt-2">
+  <p class="loading-data">Loading data<span>.</span><span>.</span><span>.</span></p>
+</div>
