--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -1,18 +1,18 @@
 <div class="row" ng-hide="loadingData || !data || data.length == 0">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
-    Scale: <radio-selections style="text-transform: capitalize;" class="ml-2" options="availableScales" selected="scale" on-value-change="scaleChange"></radio-selections>
+    <span>Scale: </span><radio-selections class="ml-2" options="availableScales" selected="scale" on-value-change="scaleChange"></radio-selections>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
-    Mode: <radio-selections style="text-transform: capitalize;" class="ml-2" options="availableModes" selected="mode" on-value-change="modeChange"></radio-selections>
+    <span>Mode: </span><radio-selections class="ml-2" options="availableModes" selected="mode" on-value-change="modeChange"></radio-selections>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
-    Group graph by: <checkbox-selections style="text-transform: capitalize;" class="ml-2" options="availableSelections" selected="groupBy" on-value-change="groupByChange"></checkbox-selections>
+    Group graph by: <checkbox-selections class="ml-2" options="availableSelections" selected="groupBy" on-value-change="groupByChange"></checkbox-selections>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
-    Color graph by: <checkbox-selections style="text-transform: capitalize;" class="ml-2" options="availableSelections" selected="colorBy" on-value-change="colorByChange"></checkbox-selections>
+    Color graph by: <checkbox-selections class="ml-2" options="availableSelections" selected="colorBy" on-value-change="colorByChange"></checkbox-selections>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 m-2" >
-    Stack graph by: <checkbox-selections style="text-transform: capitalize;" class="ml-2" options="availableSelections" selected="stackBy" on-value-change="stackByChange"></checkbox-selections>
+    Stack graph by: <checkbox-selections class="ml-2" options="availableSelections" selected="stackBy" on-value-change="stackByChange"></checkbox-selections>
   </div>
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <column-chart scale="scale"
