--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -11,7 +11,7 @@
   <div class="row spacing">
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="present" ng-click="nav('/present')">
-        <i class="fa fa-chart-bar fa-5x bounceIn animated"></i>
+        <i class="fa fa-bar-chart fa-5x bounceIn animated"></i>
         <h3>Present</h3>
       </a>
       <p>
@@ -21,7 +21,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="historical" ng-click="nav('/historical')">
-        <i class="fa fa-chart-line fa-5x bounceIn animated" style="animation-delay: 0.1s"></i>
+        <i class="fa fa-line-chart fa-5x bounceIn animated" style="animation-delay: 0.1s"></i>
         <h3>Historical</h3>
       </a>
       <p>
@@ -99,11 +99,11 @@
     <li><s>Search appending</s></li>
     <li><s>Buttons on the top act funny</s></li>
     <li>Donuts in present</li>
-    <li>Search by dataset</li>
+    <li><s>Search by dataset</s></li>
     <li>Table in performance</li>
     <li><s>Ability to unselect bars</s></li>
     <li>Colors for all things in present</li>
-    <li>CSS nightmare: size, alignment, color, etc.</li>
+    <li><s>CSS nightmare: size, alignment, color, etc.</s></li>
     <li>Error messages</li>
     <li>Screenshots</li>
     <li><s>Chained mode in present</s></li>
