--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -60,9 +60,9 @@
         </div>
       </div>
       <div>
-        <div ng-include="'build/filter.min.html'"></div>
-        <div ng-include="'build/advanced.min.html'"></div>
-        <div ng-include="'build/share.min.html'"></div>
+        <div ng-include="'static/build/filter.min.html'"></div>
+        <div ng-include="'static/build/advanced.min.html'"></div>
+        <div ng-include="'static/build/share.min.html'"></div>
       </div>
     </div>
   </div>
