--- a/pmp/templates/invalid.html
+++ b/pmp/templates/invalid.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <!--pMp CSS-->
-    <link href="build/pmp.build.css" rel="stylesheet"/>
+    <link href="static/build/pmp.build.css" rel="stylesheet"/>
     <style type="text/css">
       .centered {
         position: fixed;
