--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -169,3 +169,23 @@ body {
     width: 25%;
     display: inline-block;
 }
+
+body:after{
+    content: "beta";
+    position: fixed;
+    width: 160px;
+    height: 40px;
+    background: red;
+    top: 20px;
+    right: -40px;
+    text-align: center;
+    font-size: 25px;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
+    line-height: 40px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
