--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -1,4 +1,4 @@
-<div class="row spacing">
+<div class="row mt-2">
   <div class="col-lg-12 text-center">
     <h2>
       <strong>Production Monitoring Platform <span style="color:red;">Second Edition</span></strong>
@@ -6,16 +6,16 @@
     <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
 </div>
-<div class="spacing text-center">
+<div class="mt-2 text-center">
   <hr class="line"/>
-  <div class="row spacing">
+  <div class="row mt-2">
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="present" ng-click="nav('/present')">
         <i class="fa fa-bar-chart fa-5x bounceIn animated"></i>
         <h3>Present</h3>
       </a>
       <p>
-        Get information about selected campaigns and their requests
+        See current state of production
       </p>
     </div>
 
@@ -25,7 +25,7 @@
         <h3>Historical</h3>
       </a>
       <p>
-        View history of campaigns, requests and workflows
+        View produced events amount grew over time
       </p>
     </div>
 
@@ -35,7 +35,7 @@
         <h3>Performance</h3>
       </a>
       <p>
-        Check health of past requests and view time distribution of status transitions
+        Check time distribution of status transitions
       </p>
     </div>
 
@@ -66,14 +66,14 @@
   </div>
 </div>
 
-<div class="spacing text-center">
-  <div class="row spacing text-center">
+<div class="mt-2 text-center">
+  <div class="row mt-2 text-center">
     <h3 style="width: 100%">
       <strong>pMp database is:</strong>
     </h3>
   </div>
-  <div class="row spacing">
-    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
+  <div class="row mt-2">
+    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
       <div class="panel panel-default">
         <div class="panel-heading">
           <h1>{{value}}</h1>
@@ -86,29 +86,18 @@
   </div>
 </div>
 
-<div class="spacing">
-  <div class="row spacing">
+<div class="mt-2">
+  <div class="row mt-2">
     <h3>
       <strong>ToDo</strong>
     </h3>
   </div>
   <ul>
-    <li><s>Link shortening</s></li>
-    <li><s>X axis in present</s></li>
     <li>Workflow graph</li>
-    <li><s>Search appending</s></li>
-    <li><s>Buttons on the top act funny</s></li>
     <li>Donuts in present</li>
-    <li><s>Search by dataset</s></li>
     <li>Table in performance</li>
-    <li><s>Ability to unselect bars</s></li>
-    <li>Colors for all things in present</li>
-    <li><s>CSS nightmare: size, alignment, color, etc.</s></li>
     <li>Error messages</li>
     <li>Screenshots</li>
-    <li><s>Chained mode in present</s></li>
-    <li><s>Growing mode in present</s></li>
-    <li><s>Submitted vs done events in present</s></li>
     <li>Logging</li>
   </ul>
 </div>
